--- a/css/styles.css
+++ b/css/styles.css
@@ -45,9 +45,10 @@ i{
 }
 .seccion-two{
     width: 400px;
-    height: 600px;
+    height: 500px;
     margin-top: 0;
     margin-left: 5%;
+    margin-bottom: 0;
     text-align: center;
     background-color:white;
     padding: 25px;
@@ -82,6 +83,7 @@ p{
 }
 input{
     width: 175px;
+    height: 50px;
     padding: 15px;
     text-align: center;
     border-radius:10px;
@@ -90,6 +92,7 @@ input{
     font-size: 17px;
     cursor: pointer;
     margin-right: 20px;
+    transition: 0.8s;
 }
 .btn-encriptar{
     background-color: #A4161A;
@@ -106,6 +109,20 @@ input{
     color: #F5F3F4;
 }
 .btn-desencriptar:hover{
+    background-color:#161A1D;
+    color: #F5F3F4;
+    transform: scale(1.05);
+}
+.btn-copiar{
+    position: relative;
+    background-color: #A4161A;
+    color: #F5F3F4;
+    margin-top: 212px;
+    margin-left: 25px
+    
+
+}
+.btn-copiar:hover{
     background-color:#161A1D;
     color: #F5F3F4;
     transform: scale(1.05);
