--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ body{
 }
 main{
     width: 100%;
-    display: flex;
+    display:flex;
     background-color:#D3D3D3;
 }
 .logo{
@@ -45,7 +45,7 @@ i{
     font-style: italic;
 }
 .seccion-two{
-    width: 400px;
+    width: 450px;
     height: 500px;
     margin-top: 0;
     margin-left: 5%;
@@ -56,6 +56,7 @@ i{
     border-radius: 25px;
     
 }
+
 .muñeco-lupa{
     margin-top: 30%;
     margin-bottom: 10px;
@@ -67,7 +68,8 @@ i{
 p{
    margin: 0;
    font-family: sans-serif;
-   line-height: 1.5;
+   line-height: 1.2;
+   text-align: center;
 
 }
 .no-found{
@@ -82,7 +84,7 @@ p{
     margin-top: 15px;
     margin-left: 35%;
 }
-input{
+.btn-encriptar, .btn-desencriptar{
     width: 175px;
     height: 50px;
     padding: 15px;
@@ -93,7 +95,7 @@ input{
     font-size: 17px;
     cursor: pointer;
     margin-right: 20px;
-    transition: 0.8s;
+    transition: 0.2s;
 }
 .btn-encriptar{
     background-color: #A4161A;
@@ -114,17 +116,49 @@ input{
     color: #F5F3F4;
     transform: scale(1.05);
 }
+.msgEncriptado{
+    margin: 5px 50px 0px 0px;
+    text-align: justify;
+    font-family: sans-serif;
+    font-size: 20px;
+    color:black;
+    text-transform: lowercase;
+}
 .btn-copiar{
-    position: relative;
+    position:absolute;
+    left: 900px;
+    top: 690px;
+    width: 100px;
+    height: 45px;
+    padding: 15px;
+    text-align: center;
+    border-radius:10px;
+    border-width: 0;
+    font-family: sans-serif;
+    font-size: 17px;
+    cursor: pointer;
     background-color: #A4161A;
     color: #F5F3F4;
-    margin-top: 212px;
     margin-left: 25px;
-    position: static;
+    transition: 0.2s;
 
 }
 .btn-copiar:hover{
     background-color:#161A1D;
     color: #F5F3F4;
     transform: scale(1.05);
+}
+
+footer{
+    background-color:#0B090A;
+    color: #F5F3F4;
+    width: 100%;
+    height: 100px;
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    
+}
+.pie{
+    margin: 35px auto;
 }
